# macro-place-challenge-2026

./: .gitignore  .gitmodules  README.md  SCORING.md  SETUP.md  pyproject.toml  requirements.txt
benchmarks/processed/public/: bp_quad_ng45.pt
macro_place/: evaluate.py
scripts/: convert_asap7_benchmarks.py  convert_ibm_benchmarks.py  evaluate_shelfpack.py  evaluate_with_orfs.py  generate_macro_placement_tcl.py  run_openroad_flow.tcl  test_macro_placement.tcl  view_placement_openroad.tcl
src/: benchmark.py  loader.py  objective.py  utils.py
submissions/examples/: README.md  simple_random_placer.py
submissions/examples/random_placer/: README.md
test/: check_nets.py  debug_congestion.py  find_boundary_pins.py  test_infrastructure.py  test_plc_only.py
